--- a/web/index.html
+++ b/web/index.html
@@ -43,6 +43,7 @@
   <link rel="stylesheet" type="text/css" href="splash/style.css">
   <!-- <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport"> -->
   <script src="splash/splash.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/amcharts/3.21.15/plugins/export/libs/FileSaver.js/FileSaver.min.js"></script> 
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
 
   
